Updated project structure and added TypeScript support
Added:
- www/typescript/:
	- index.ts
	- package-lock.json
	- package.json
	- tsconfig.json
	- username.ts

Edited:
- www/pages/:
	- index.html (renamed from www/templates/index.html)
	- username.html (renamed from www/templates/username.html)
- www/styles/username.css: adapted to use with classes instead of IDs

--- a/www/pages/username.html
+++ b/www/pages/username.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Choose Username (you can change it later)</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="scripts/username.js?version=1.2" defer></script>
-	<link rel="stylesheet" href="styles/username.css?version=1.2">
+	<script src="../dist/username.js" defer></script>
+	<link rel="stylesheet" href="../styles/username.css">
 </head>
 <body>
 	<form id="username-form">
 		<label for="username">Enter your username:</label>
-		<input type="text" id="username" name="username" required>
+		<input class="username-input">
 		<button type="submit">Continue</button>
 	</form>
 </body>
