--- a/www/pages/index.html
+++ b/www/pages/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="scripts/index.js?version=1.2" defer></script>
-	<link rel="stylesheet" href="styles/index.css?version=1.2">
+	<script src="../dist/index.js" defer></script>
+	<link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
 	<div class="chat-container">
